Remove header client visible

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -46,7 +46,7 @@ const { title, url } = Astro.props;
     <LoadingIndicator color="#0d6eff" height="2.5px" />
   </head>
   <body>
-    <Header client:visible />
+    <Header />
     <slot />
     <Footer />
   </body>
