--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ import "@fontsource/inter/700.css";
 import "@fontsource/inter/800.css";
 // /font
 
-// import { ViewTransitions } from "astro:transitions";
+import { ViewTransitions } from "astro:transitions";
 import Header from "$lib/components/Header.svelte";
 import Footer from "$lib/components/Footer.astro";
 import LoadingIndicator from "astro-loading-indicator/component";
@@ -44,7 +44,7 @@ const { title, url } = Astro.props;
 
     
     <LoadingIndicator color="#0d6eff" height="2.5px" />
-    <!-- <ViewTransitions /> -->
+    <ViewTransitions />
   </head>
   <body>
     <Header client:visible />
