--- a/src/components/Paginator.astro
+++ b/src/components/Paginator.astro
@@ -23,7 +23,7 @@ const { page } = Astro.props;
     Newer Posts
   </a>
 
-  <div class="hidden md:block text-zinc-800">
+  <div class="hidden md:block text-zinc-800 dark:text-muted-foreground">
     Page
     {page.currentPage}
     of
