--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -21,10 +21,10 @@ const { article } = Astro.props;
     </div>
 
     <div class="mt-4 text-sm font-medium">
-      <span class="text-zinc-600">By</span>
+      <span class="text-zinc-600 dark:text-muted-foreground">By</span>
       {article.data.author}
       <span
-        class="block md:inline text-zinc-600 mt-1 md:mt-0 pubDate"
+        class="block md:inline text-zinc-600 mt-1 md:mt-0 pubDate dark:text-muted-foreground"
         >{formatDate(article.data.pubDate)}</span
       >
     </div>
