--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,7 +4,7 @@ const { title, link } = Astro.props;
 
 <a
   href={link}
-  class="bg-zinc-200 hover:bg-lightBlue hover:text-white transition py-3.5 px-6 font-semibold rounded-full"
+  class="bg-zinc-200 dark:bg-zinc-900 hover:bg-lightBlue dark:hover:bg-lightBlue hover:text-white transition py-3.5 px-6 font-semibold rounded-full"
 >
   {title}
 </a>
