--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,6 +17,30 @@ import LoadingIndicator from "astro-loading-indicator/component";
 const { title, url } = Astro.props;
 ---
 
+<script is:inline>
+  const isBrowser = typeof localStorage !== 'undefined';
+  const getThemePreference = () => {
+    if (isBrowser && localStorage.getItem('theme')) {
+      return localStorage.getItem('theme');
+    }
+    return window.matchMedia('(prefers-color-scheme: dark)').matches
+      ? 'dark' : 'light';
+  };
+  const isDark = getThemePreference() === 'dark';
+  document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
+ 
+  if (isBrowser) {
+    const observer = new MutationObserver(() => {
+      const isDark = document.documentElement.classList.contains('dark');
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
+    });
+    observer.observe(document.documentElement, {
+      attributes: true,
+      attributeFilter: ['class']
+    });
+  }
+</script>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -46,7 +70,7 @@ const { title, url } = Astro.props;
     <ViewTransitions />
   </head>
   <body>
-    <Header client:visible />
+    <Header client:load />
     <slot />
     <Footer />
   </body>
