--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -64,7 +64,7 @@ const { page }: any = Astro.props;
             Newer Posts
           </a>
 
-          <div class="hidden md:block text-zinc-800">
+          <div class="hidden md:block text-zinc-800 dark:text-muted-foreground">
             Page
             {page.currentPage}
             of
