--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -5,7 +5,7 @@ import BaseLayout from "$lib/layouts/BaseLayout.astro";
 <BaseLayout>
   <main class="container mt-12 lg:mt-16 mb-16 md:mb-24 max-w-5xl h-96">
     <h1 class="text-4xl font-extrabold">Privacy Policy</h1>
-    <p class="mt-6">
+    <p class="mt-6 dark:text-zinc-200">
       If you have any questions or suggestions about our Privacy Policy, do not
       hesitate to contact us at [email]
     </p>
