change dark mode to slate

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,7 +8,7 @@ import Button from "$lib/components/Button.astro";
     class="container mt-24 mb-16 lg:mt-40 xl:mt-56 xl:mb-40 md:mb-24 max-w-3xl text-center"
   >
     <h1 class="text-3xl font-bold md:text-5xl">Page Not Found</h1>
-    <p class="mt-6 md:text-lg dark:text-zinc-200">
+    <p class="mt-6 md:text-lg dark:text-slate-200">
       The page you were looking for could not be found. It might have been
       removed, renamed, or did not exist in the first place. Perhaps searching
       can help.
