--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -68,7 +68,7 @@ const relatedArticles = article.data.relatedArticles
 
     <div class="flex gap-2 items-center my-6">
       <div
-        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-zinc-900 rounded-full"
+        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-900 rounded-full"
       >
         <svg
           class="absolute w-12 h-12 text-zinc-400 -left-1"
@@ -103,8 +103,10 @@ const relatedArticles = article.data.relatedArticles
           "max-w-none",
           "prose-img:rounded-lg",
           "prose-lg",
-          "dark:prose-zinc",
+          "prose-zinc",
+          "dark:prose-slate",
           "dark:prose-invert",
+          "dark:prose-headings:text-foreground",
           { "border-b pb-12": relatedArticles.length > 0 },
         ]}
       >
@@ -123,7 +125,7 @@ const relatedArticles = article.data.relatedArticles
             <span class="dark:text-muted-foreground">By</span>
 
             <div
-              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-zinc-900 rounded-full"
+              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-900 rounded-full"
             >
               <svg
                 class="absolute w-12 h-12 text-zinc-400 -left-1"
