--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -78,6 +78,6 @@
   }
 
   body {
-    @apply bg-background text-foreground font-openSans;
+    @apply bg-background text-foreground font-inter;
   }
 }
