Change dark mode to zinc

--- a/src/components/ContactCard.astro
+++ b/src/components/ContactCard.astro
@@ -7,7 +7,7 @@ import Button from "$lib/components/Button.astro";
     Join Us and Let's Explore Together
   </h2>
 
-  <p class="mt-3 font-medium text-white lg:text-lg dark:text-slate-200">
+  <p class="mt-3 font-medium text-white lg:text-lg dark:text-zinc-200">
     Welcome to your go-to destination for fresh perspectives. Dive deep into our
     rich content pool curated meticulously to enlighten, entertain, and engage
     readers across the globe.
