--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="pt-12 bg-zinc-100 dark:bg-slate-900 xl:pt-16">
+<footer class="pt-12 bg-zinc-100 dark:bg-zinc-800 xl:pt-16">
   <div class="max-w-md lg:max-w-xl xl:max-w-full">
     <div
       class="container flex flex-col justify-between gap-12 xl:grid xl:grid-cols-3 xl:gap-12 xl:items-center xl:place-items-end"
@@ -6,7 +6,7 @@
       <div>
         <h2 class="text-2xl font-bold">So Much Tech</h2>
 
-        <p class="mt-3 font-medium dark:text-slate-200">
+        <p class="mt-3 font-medium dark:text-zinc-200">
           Welcome to your go-to destination for fresh perspectives. Dive deep
           into our rich content pool curated meticulously to enlighten,
           entertain, and engage readers across the globe.
