Make darker color in of font in tailwind typography

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -104,6 +104,20 @@ const relatedArticles = article.data.relatedArticles
           "prose-img:rounded-lg",
           "prose-lg",
           "prose-zinc",
+          "prose-headings:text-foreground",
+          "prose-p:text-foreground",
+          "prose-blockquote:text-foreground",
+          "prose-strong:text-foreground",
+          "prose-em:text-foreground",
+          "prose-kbd:text-foreground",
+          "prose-code:text-foreground",
+          "prose-pre:text-foreground",
+          "prose-ol:text-foreground",
+          "prose-ul:text-foreground",
+          "prose-li:text-foreground",
+          "prose-table:text-foreground",
+          "prose-thead:text-foreground",
+          "prose-th:text-foreground",
           "dark:prose-invert",
           "dark:prose-headings:text-foreground",
           { "border-b pb-12": relatedArticles.length > 0 },
