--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -104,6 +104,7 @@ const relatedArticles = article.data.relatedArticles
           "prose-img:rounded-lg",
           "prose-lg",
           "prose-zinc",
+          "prose-a:hover:text-lightBlue",
           "prose-headings:text-foreground",
           "prose-p:text-foreground",
           "prose-blockquote:text-foreground",
