--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -120,7 +120,7 @@ const relatedArticles = article.data.relatedArticles
           "prose-thead:text-foreground",
           "prose-th:text-foreground",
           "dark:prose-invert",
-          "dark:prose-headings:text-foreground",
+          "dark:prose-a:hover:text-lightBlue",
           { "border-b pb-12": relatedArticles.length > 0 },
         ]}
       >
