Make p and other element color a litte brighter in dark mode

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -119,19 +119,19 @@ const relatedArticles = article.data.relatedArticles
           "prose-table:text-foreground",
           "prose-thead:text-foreground",
           "prose-th:text-foreground",
-          "dark:prose-p:text-zinc-200",
-          "dark:prose-blockquote:text-zinc-200",
-          "dark:prose-strong:text-zinc-200",
-          "dark:prose-em:text-zinc-200",
-          "dark:prose-kbd:text-zinc-200",
-          "dark:prose-code:text-zinc-200",
-          "dark:prose-pre:text-zinc-200",
-          "dark:prose-ol:text-zinc-200",
-          "dark:prose-ul:text-zinc-200",
-          "dark:prose-li:text-zinc-200",
-          "dark:prose-table:text-zinc-200",
-          "dark:prose-thead:text-zinc-200",
-          "prose-th:text-zinc-200",
+          "dark:prose-p:text-zinc-100",
+          "dark:prose-blockquote:text-zinc-100",
+          "dark:prose-strong:text-zinc-100",
+          "dark:prose-em:text-zinc-100",
+          "dark:prose-kbd:text-zinc-100",
+          "dark:prose-code:text-zinc-100",
+          "dark:prose-pre:text-zinc-100",
+          "dark:prose-ol:text-zinc-100",
+          "dark:prose-ul:text-zinc-100",
+          "dark:prose-li:text-zinc-100",
+          "dark:prose-table:text-zinc-100",
+          "dark:prose-thead:text-zinc-100",
+          "dark:prose-th:text-zinc-100",
           "dark:prose-invert",
           "dark:prose-a:hover:text-lightBlue",
           { "border-b pb-12": relatedArticles.length > 0 },
