--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,7 @@ import "@fontsource/inter/500.css";
 import "@fontsource/inter/600.css";
 import "@fontsource/inter/700.css";
 import "@fontsource/inter/800.css";
+import '@fontsource-variable/lora';
 // /font
 
 import { ViewTransitions } from "astro:transitions";
@@ -16,30 +17,6 @@ import LoadingIndicator from "astro-loading-indicator/component";
 
 const { title, url } = Astro.props;
 ---
-
-<script is:inline>
-  const isBrowser = typeof localStorage !== 'undefined';
-  const getThemePreference = () => {
-    if (isBrowser && localStorage.getItem('theme')) {
-      return localStorage.getItem('theme');
-    }
-    return window.matchMedia('(prefers-color-scheme: dark)').matches
-      ? 'dark' : 'light';
-  };
-  const isDark = getThemePreference() === 'dark';
-  document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
- 
-  if (isBrowser) {
-    const observer = new MutationObserver(() => {
-      const isDark = document.documentElement.classList.contains('dark');
-      localStorage.setItem('theme', isDark ? 'dark' : 'light');
-    });
-    observer.observe(document.documentElement, {
-      attributes: true,
-      attributeFilter: ['class']
-    });
-  }
-</script>
 
 <html lang="en">
   <head>
@@ -70,7 +47,7 @@ const { title, url } = Astro.props;
     <ViewTransitions />
   </head>
   <body>
-    <Header client:load />
+    <Header client:visible />
     <slot />
     <Footer />
   </body>
