--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -99,15 +99,14 @@ const relatedArticles = article.data.relatedArticles
       <article
         class:list={[
           "lg:col-span-2",
-          "font-lora",
+          "font-merriweather",
           "prose",
           "max-w-none",
           "prose-img:rounded-lg",
-          "prose-lg",
           "prose-zinc",
-          "prose-a:hover:text-lightBlue",
-          "prose-headings:text-foreground",
           "prose-headings:font-inter",
+          "prose-a:hover:text-lightBlue",
+          "prose-headings:text-foreground",         
           "prose-p:text-foreground",
           "prose-blockquote:text-foreground",
           "prose-strong:text-foreground",
