Make font large of articles

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -103,6 +103,7 @@ const relatedArticles = article.data.relatedArticles
           "prose",
           "max-w-none",
           "prose-img:rounded-lg",
+          "prose-lg",
           "prose-zinc",
           "prose-headings:font-inter",
           "prose-a:hover:text-lightBlue",
