Make headings small in smaller screen

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -104,6 +104,10 @@ const relatedArticles = article.data.relatedArticles
           "max-w-none",
           "prose-img:rounded-lg",
           "prose-lg",
+          "prose-h2:text-2xl",
+          "prose-h3:text-xl",
+          "lg:prose-h2:text-3xl",
+          "lg:prose-h3:text-2xl",
           "prose-zinc",
           "prose-headings:font-inter",
           "prose-a:hover:text-lightBlue",
