--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,7 @@
-<section class="p-10 rounded-lg bg-zinc-100 dark:bg-zinc-800">
+<section class="p-10 rounded-lg bg-zinc-100 dark:bg-neutral-800">
   <h2 class="text-2xl font-bold">So Much Tech</h2>
 
-  <p class="mt-3 font-medium lg:text-lg dark:text-zinc-200">
+  <p class="mt-3 font-medium lg:text-lg dark:text-neutral-200">
     Welcome to your go-to destination for fresh perspectives. Dive deep into our
     rich content pool curated meticulously to enlighten, entertain, and engage
     readers across the globe.
