--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -68,7 +68,7 @@ const relatedArticles = article.data.relatedArticles
 
     <div class="flex gap-2 items-center my-6">
       <div
-        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-zinc-800 rounded-full"
+        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-neutral-800 rounded-full"
       >
         <svg
           class="absolute w-12 h-12 text-zinc-400 -left-1"
@@ -125,20 +125,20 @@ const relatedArticles = article.data.relatedArticles
           "prose-table:text-foreground",
           "prose-thead:text-foreground",
           "prose-th:text-foreground",
-          "dark:prose-invert",
-          "dark:prose-p:text-zinc-200",
-          "dark:prose-blockquote:text-zinc-200",
-          "dark:prose-strong:text-zinc-200",
-          "dark:prose-em:text-zinc-200",
-          "dark:prose-kbd:text-zinc-200",
-          "dark:prose-code:text-zinc-200",
-          "dark:prose-pre:text-zinc-200",
-          "dark:prose-ol:text-zinc-200",
-          "dark:prose-ul:text-zinc-200",
-          "dark:prose-li:text-zinc-200",
-          "dark:prose-table:text-zinc-200",
-          "dark:prose-thead:text-zinc-200",
-          "dark:prose-th:text-zinc-200",
+          "dark:prose-neutral",
+          "dark:prose-p:text-neutral-200",
+          "dark:prose-blockquote:text-neutral-200",
+          "dark:prose-strong:text-neutral-200",
+          "dark:prose-em:text-neutral-200",
+          "dark:prose-kbd:text-neutral-200",
+          "dark:prose-code:text-neutral-200",
+          "dark:prose-pre:text-neutral-200",
+          "dark:prose-ol:text-neutral-200",
+          "dark:prose-ul:text-neutral-200",
+          "dark:prose-li:text-neutral-200",
+          "dark:prose-table:text-neutral-200",
+          "dark:prose-thead:text-neutral-200",
+          "dark:prose-th:text-neutral-200",
           "dark:prose-a:hover:text-lightBlue",
           { "border-b pb-12": relatedArticles.length > 0 },
         ]}
@@ -158,7 +158,7 @@ const relatedArticles = article.data.relatedArticles
             <span class="dark:text-muted-foreground">By</span>
 
             <div
-              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-zinc-800 rounded-full"
+              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-neutral-800 rounded-full"
             >
               <svg
                 class="absolute w-12 h-12 text-zinc-400 -left-1"
