--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,8 +8,7 @@ import "@fontsource/inter/600.css";
 import "@fontsource/inter/700.css";
 import "@fontsource/inter/800.css";
 
-import '@fontsource/merriweather/400.css';
-import '@fontsource/merriweather/700.css';
+import '@fontsource-variable/lora';
 // /font
 
 import { ViewTransitions } from "astro:transitions";
