Change article font to notoserif

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -99,7 +99,7 @@ const relatedArticles = article.data.relatedArticles
       <article
         class:list={[
           "lg:col-span-2",
-          "font-lora",
+          "font-notoSerif",
           "prose",
           "max-w-none",
           "prose-img:rounded-lg",
