--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,7 +8,11 @@ import "@fontsource/inter/600.css";
 import "@fontsource/inter/700.css";
 import "@fontsource/inter/800.css";
 
-import '@fontsource-variable/lora';
+import '@fontsource/noto-serif/400.css';
+import '@fontsource/noto-serif/500.css';
+import '@fontsource/noto-serif/600.css';
+import '@fontsource/noto-serif/700.css';
+import '@fontsource/noto-serif/800.css';
 // /font
 
 import { ViewTransitions } from "astro:transitions";
