--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -6,7 +6,7 @@ const { tags } = Astro.props;
 <div class="flex flex-wrap gap-2">
   {
     tags.map((tag: string) => (
-      <span class="text-zinc-600 bg-zinc-100 dark:bg-neutral-800 dark:text-foreground hover:bg-zinc-200 dark:hover:bg-neutral-700 transition py-1.5 px-3 rounded font-medium text-sm">
+      <span class="text-zinc-600 bg-zinc-100 dark:bg-slate-800 dark:text-foreground hover:bg-zinc-200 dark:hover:bg-slate-700 transition py-1.5 px-3 rounded font-medium text-sm">
         <a href={`/articles/category/${tag}/`}>#{capitalize(tag)}</a>
       </span>
     ))
