--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -68,7 +68,7 @@ const relatedArticles = article.data.relatedArticles
 
     <div class="flex gap-2 items-center my-6">
       <div
-        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-neutral-800 rounded-full"
+        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-800 rounded-full"
       >
         <svg
           class="absolute w-12 h-12 text-zinc-400 -left-1"
@@ -99,7 +99,6 @@ const relatedArticles = article.data.relatedArticles
       <article
         class:list={[
           "lg:col-span-2",
-          "font-merriweather",
           "prose",
           "max-w-none",
           "prose-img:rounded-lg",
@@ -109,7 +108,6 @@ const relatedArticles = article.data.relatedArticles
           "lg:prose-h2:text-3xl",
           "lg:prose-h3:text-2xl",
           "prose-zinc",
-          "prose-headings:font-inter",
           "prose-a:hover:text-lightBlue",
           "prose-headings:text-foreground",         
           "prose-p:text-foreground",
@@ -125,20 +123,20 @@ const relatedArticles = article.data.relatedArticles
           "prose-table:text-foreground",
           "prose-thead:text-foreground",
           "prose-th:text-foreground",
-          "dark:prose-neutral",
-          "dark:prose-p:text-neutral-200",
-          "dark:prose-blockquote:text-neutral-200",
-          "dark:prose-strong:text-neutral-200",
-          "dark:prose-em:text-neutral-200",
-          "dark:prose-kbd:text-neutral-200",
-          "dark:prose-code:text-neutral-200",
-          "dark:prose-pre:text-neutral-200",
-          "dark:prose-ol:text-neutral-200",
-          "dark:prose-ul:text-neutral-200",
-          "dark:prose-li:text-neutral-200",
-          "dark:prose-table:text-neutral-200",
-          "dark:prose-thead:text-neutral-200",
-          "dark:prose-th:text-neutral-200",
+          "dark:prose-slate",
+          "dark:prose-p:text-slate-200",
+          "dark:prose-blockquote:text-slate-200",
+          "dark:prose-strong:text-slate-200",
+          "dark:prose-em:text-slate-200",
+          "dark:prose-kbd:text-slate-200",
+          "dark:prose-code:text-slate-200",
+          "dark:prose-pre:text-slate-200",
+          "dark:prose-ol:text-slate-200",
+          "dark:prose-ul:text-slate-200",
+          "dark:prose-li:text-slate-200",
+          "dark:prose-table:text-slate-200",
+          "dark:prose-thead:text-slate-200",
+          "dark:prose-th:text-slate-200",
           "dark:prose-a:hover:text-lightBlue",
           { "border-b pb-12": relatedArticles.length > 0 },
         ]}
@@ -153,12 +151,12 @@ const relatedArticles = article.data.relatedArticles
         <Content />
         <!-- /content -->
 
-        <div class="font-semibold text-base mt-16 font-inter">
+        <div class="font-semibold text-base mt-16">
           <div class="flex items-center gap-2 flex-wrap">
             <span class="dark:text-muted-foreground">By</span>
 
             <div
-              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-neutral-800 rounded-full"
+              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-800 rounded-full"
             >
               <svg
                 class="absolute w-12 h-12 text-zinc-400 -left-1"
