Make default slate-950 for dark

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -68,7 +68,7 @@ const relatedArticles = article.data.relatedArticles
 
     <div class="flex gap-2 items-center my-6">
       <div
-        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-800 rounded-full"
+        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-900 rounded-full"
       >
         <svg
           class="absolute w-12 h-12 text-zinc-400 -left-1"
@@ -124,6 +124,7 @@ const relatedArticles = article.data.relatedArticles
           "prose-thead:text-foreground",
           "prose-th:text-foreground",
           "dark:prose-slate",
+          "dark:prose-headings:text-foreground",
           "dark:prose-p:text-slate-200",
           "dark:prose-blockquote:text-slate-200",
           "dark:prose-strong:text-slate-200",
@@ -156,7 +157,7 @@ const relatedArticles = article.data.relatedArticles
             <span class="dark:text-muted-foreground">By</span>
 
             <div
-              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-800 rounded-full"
+              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-900 rounded-full"
             >
               <svg
                 class="absolute w-12 h-12 text-zinc-400 -left-1"
