Change dark mode color to zinc

--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -68,7 +68,7 @@ const relatedArticles = article.data.relatedArticles
 
     <div class="flex gap-2 items-center my-6">
       <div
-        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-900 rounded-full"
+        class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-zinc-900 rounded-full"
       >
         <svg
           class="absolute w-12 h-12 text-zinc-400 -left-1"
@@ -123,21 +123,21 @@ const relatedArticles = article.data.relatedArticles
           "prose-table:text-foreground",
           "prose-thead:text-foreground",
           "prose-th:text-foreground",
-          "dark:prose-slate",
+          "dark:prose-invert",
           "dark:prose-headings:text-foreground",
-          "dark:prose-p:text-slate-200",
-          "dark:prose-blockquote:text-slate-200",
-          "dark:prose-strong:text-slate-200",
-          "dark:prose-em:text-slate-200",
-          "dark:prose-kbd:text-slate-200",
-          "dark:prose-code:text-slate-200",
-          "dark:prose-pre:text-slate-200",
-          "dark:prose-ol:text-slate-200",
-          "dark:prose-ul:text-slate-200",
-          "dark:prose-li:text-slate-200",
-          "dark:prose-table:text-slate-200",
-          "dark:prose-thead:text-slate-200",
-          "dark:prose-th:text-slate-200",
+          "dark:prose-p:text-zinc-200",
+          "dark:prose-blockquote:text-zinc-200",
+          "dark:prose-strong:text-zinc-200",
+          "dark:prose-em:text-zinc-200",
+          "dark:prose-kbd:text-zinc-200",
+          "dark:prose-code:text-zinc-200",
+          "dark:prose-pre:text-zinc-200",
+          "dark:prose-ol:text-zinc-200",
+          "dark:prose-ul:text-zinc-200",
+          "dark:prose-li:text-zinc-200",
+          "dark:prose-table:text-zinc-200",
+          "dark:prose-thead:text-zinc-200",
+          "dark:prose-th:text-zinc-200",
           "dark:prose-a:hover:text-lightBlue",
           { "border-b pb-12": relatedArticles.length > 0 },
         ]}
@@ -157,7 +157,7 @@ const relatedArticles = article.data.relatedArticles
             <span class="dark:text-muted-foreground">By</span>
 
             <div
-              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-slate-900 rounded-full"
+              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-zinc-900 rounded-full"
             >
               <svg
                 class="absolute w-12 h-12 text-zinc-400 -left-1"
