Remove so much tech name

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -57,12 +57,12 @@ const { title, url } = Astro.props;
     <meta name="web_author" content="company name" />
 
     <meta name="description" content="" />
-    <meta name="og:title" content={`${title} | So Much Tech`} />
+    <meta name="og:title" content={`${title} | Techie Faisal`} />
     <meta name="og:description" content="" />
 
     <link rel="icon" type="image/svg+xml" href="#" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title} | So Much Tech</title>
+    <title>{title} | Techie Faisal</title>
 
     <link rel="sitemap" href="/sitemap-index.xml" />
 
