--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,6 +1,17 @@
-<section class="p-10 rounded-lg bg-zinc-100 dark:bg-zinc-900">
-  <h2 class="text-2xl font-bold">So Much Tech</h2>
+---
+import { Picture } from "astro:assets";
+import logo from "$lib/lib/assets/img/logo.png"
+---
 
+<section class="p-10 rounded-lg bg-zinc-100 dark:bg-zinc-900">
+  <Picture
+        src={logo}
+        alt=""
+        formats={["avif", "webp"]}
+        width={70}
+        height={70}
+      />  
+ 
   <p class="mt-3 font-medium lg:text-lg dark:text-zinc-200">
     Welcome to your go-to destination for fresh perspectives. Dive deep into our
     rich content pool curated meticulously to enlighten, entertain, and engage
