--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,21 @@
+---
+import { Picture } from "astro:assets";
+import logo from "$lib/lib/assets/img/logo.png"
+---
+
 <footer class="pt-12 bg-zinc-100 dark:bg-zinc-900 xl:pt-16">
   <div class="max-w-md lg:max-w-xl xl:max-w-full">
     <div
       class="container flex flex-col justify-between gap-12 xl:grid xl:grid-cols-3 xl:gap-12 xl:items-center xl:place-items-end"
     >
       <div>
-        <h2 class="text-2xl font-bold">So Much Tech</h2>
+        <Picture
+          src={logo}
+          alt=""
+          formats={["avif", "webp"]}
+          width={70}
+          height={70}
+        />  
 
         <p class="mt-3 font-medium dark:text-zinc-200">
           Welcome to your go-to destination for fresh perspectives. Dive deep
@@ -93,6 +104,6 @@
   </div>
     
   <div class="container py-6 text-sm xl:py-8">
-    &copy; {new Date().getFullYear()} - So Much Tech. All Rights Reserved.
+    &copy; {new Date().getFullYear()} - Techie Faisal. All Rights Reserved.
   </div>
 </footer>
