make quality max of logo

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -8,6 +8,7 @@ import logo from "$lib/lib/assets/img/logo.png"
         src={logo}
         alt=""
         formats={["avif", "webp"]}
+        quality={100}
         width={70}
         height={70}
       />  
