Test quality of logo

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ import logo from "$lib/lib/assets/img/logo.png"
         <Picture
           src={logo}
           alt=""
-          formats={["avif", "webp"]}
+          formats={["png", "webp"]}
           quality={100}
           width={70}
           height={70}
