--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -60,7 +60,8 @@ const { title, url } = Astro.props;
     <meta name="og:title" content={`${title} | Techie Faisal`} />
     <meta name="og:description" content="" />
 
-    <link rel="icon" type="image/svg+xml" href="#" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
     <meta name="generator" content={Astro.generator} />
     <title>{title} | Techie Faisal</title>
 
