--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -108,7 +108,6 @@ const relatedArticles = article.data.relatedArticles
           "lg:prose-h2:text-3xl",
           "lg:prose-h3:text-2xl",
           "prose-zinc",
-          "prose-a:hover:text-lightBlue",
           "prose-headings:text-foreground",         
           "prose-p:text-foreground",
           "prose-blockquote:text-foreground",
@@ -123,22 +122,24 @@ const relatedArticles = article.data.relatedArticles
           "prose-table:text-foreground",
           "prose-thead:text-foreground",
           "prose-th:text-foreground",
+          "hover:prose-a:text-lightBlue",
           "dark:prose-invert",
           "dark:prose-headings:text-foreground",
-          "dark:prose-p:text-zinc-200",
-          "dark:prose-blockquote:text-zinc-200",
-          "dark:prose-strong:text-zinc-200",
-          "dark:prose-em:text-zinc-200",
-          "dark:prose-kbd:text-zinc-200",
-          "dark:prose-code:text-zinc-200",
-          "dark:prose-pre:text-zinc-200",
-          "dark:prose-ol:text-zinc-200",
-          "dark:prose-ul:text-zinc-200",
-          "dark:prose-li:text-zinc-200",
-          "dark:prose-table:text-zinc-200",
-          "dark:prose-thead:text-zinc-200",
-          "dark:prose-th:text-zinc-200",
-          "dark:prose-a:hover:text-lightBlue",
+          "dark:prose-strong:text-foreground",
+          "dark:prose-thead:text-foreground",
+          "dark:prose-th:text-foreground",
+          "dark:prose-em:text-foreground",
+          "dark:prose-p:text-zinc-300",
+          "dark:prose-blockquote:text-zinc-300",
+          "dark:prose-kbd:text-zinc-300",
+          "dark:prose-code:text-zinc-300",
+          "dark:prose-pre:text-zinc-300",
+          "dark:prose-ol:text-zinc-300",
+          "dark:prose-ul:text-zinc-300",
+          "dark:prose-li:text-zinc-300",
+          "dark:prose-table:text-zinc-300",
+          "dark:prose-tr:text-zinc-300",
+          "dark:prose-td:text-zinc-300",
           { "border-b pb-12": relatedArticles.length > 0 },
         ]}
       >
@@ -152,7 +153,7 @@ const relatedArticles = article.data.relatedArticles
         <Content />
         <!-- /content -->
 
-        <div class="font-semibold text-base mt-16">
+        <div class="font-semibold text-base mt-16 flex justify-between items-center gap-4 flex-wrap not-prose">
           <div class="flex items-center gap-2 flex-wrap">
             <span class="dark:text-muted-foreground">By</span>
 
@@ -176,6 +177,8 @@ const relatedArticles = article.data.relatedArticles
               >Update {formatDate(article.data.pubDate)}</span
             >
           </div>
+
+          <Tag tags={article.data.tags} />          
         </div>
       </article>
 
