--- a/src/pages/articles/[...slug].astro
+++ b/src/pages/articles/[...slug].astro
@@ -8,6 +8,7 @@ import About from "$lib/components/About.astro";
 import ContactCard from "$lib/components/ContactCard.astro";
 import FeaturedPost from "$lib/components/FeaturedPost.astro";
 import ArticleCard from "$lib/components/ArticleCard.astro";
+import Prose from "$lib/components/Prose.astro";
 import {
   Breadcrumb,
   BreadcrumbItem,
@@ -96,91 +97,55 @@ const relatedArticles = article.data.relatedArticles
     </div>
 
     <section class="grid grid-cols-1 gap-12 lg:grid-cols-3">
-      <article
+      <div
         class:list={[
           "lg:col-span-2",
-          "prose",
-          "max-w-none",
-          "prose-img:rounded-lg",
-          "prose-lg",
-          "prose-h2:text-2xl",
-          "prose-h3:text-xl",
-          "lg:prose-h2:text-3xl",
-          "lg:prose-h3:text-2xl",
-          "prose-zinc",
-          "prose-headings:text-foreground",         
-          "prose-p:text-foreground",
-          "prose-blockquote:text-foreground",
-          "prose-strong:text-foreground",
-          "prose-em:text-foreground",
-          "prose-kbd:text-foreground",
-          "prose-code:text-foreground",
-          "prose-pre:text-foreground",
-          "prose-ol:text-foreground",
-          "prose-ul:text-foreground",
-          "prose-li:text-foreground",
-          "prose-table:text-foreground",
-          "prose-thead:text-foreground",
-          "prose-th:text-foreground",
-          "hover:prose-a:text-lightBlue",
-          "dark:prose-invert",
-          "dark:prose-headings:text-foreground",
-          "dark:prose-strong:text-foreground",
-          "dark:prose-thead:text-foreground",
-          "dark:prose-th:text-foreground",
-          "dark:prose-em:text-foreground",
-          "dark:prose-p:text-zinc-300",
-          "dark:prose-blockquote:text-zinc-300",
-          "dark:prose-kbd:text-zinc-300",
-          "dark:prose-code:text-zinc-300",
-          "dark:prose-pre:text-zinc-300",
-          "dark:prose-ol:text-zinc-300",
-          "dark:prose-ul:text-zinc-300",
-          "dark:prose-li:text-zinc-300",
-          "dark:prose-table:text-zinc-300",
-          "dark:prose-tr:text-zinc-300",
-          "dark:prose-td:text-zinc-300",
           { "border-b pb-12": relatedArticles.length > 0 },
         ]}
       >
-        <Picture
-          src={article.data.image}
-          alt=""
-          formats={["avif", "webp"]}
-          widths={[375, 425, 768, 1024, article.data.image.width]}
-          sizes={`(max-width: 375px) 375px, (max-width: 425px) 425px, (max-width: 768px) 768px, (max-width: 1440px) 1024px ${article.data.image.width}px`}
-        />
-        <Content />
-        <!-- /content -->
+        <Prose>
+          <Picture
+            src={article.data.image}
+            alt=""
+            formats={["avif", "webp"]}
+            widths={[375, 425, 768, 1024, article.data.image.width]}
+            sizes={`(max-width: 375px) 375px, (max-width: 425px) 425px, (max-width: 768px) 768px, (max-width: 1440px) 1024px ${article.data.image.width}px`}
+          />
+          <Content />
+          <!-- /content -->
 
-        <div class="font-semibold text-base mt-16 flex justify-between items-center gap-4 flex-wrap not-prose">
-          <div class="flex items-center gap-2 flex-wrap">
-            <span class="dark:text-muted-foreground">By</span>
+          <div
+            class="font-semibold text-base mt-16 flex justify-between items-center gap-4 flex-wrap not-prose"
+          >
+            <div class="flex items-center gap-2 flex-wrap">
+              <span class="dark:text-muted-foreground">By</span>
 
-            <div
-              class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-zinc-900 rounded-full"
-            >
-              <svg
-                class="absolute w-12 h-12 text-zinc-400 -left-1"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg"
-                ><path
-                  fill-rule="evenodd"
-                  d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
-                  clip-rule="evenodd"></path></svg
+              <div
+                class="relative w-10 h-10 overflow-hidden bg-zinc-100 dark:bg-zinc-900 rounded-full"
+              >
+                <svg
+                  class="absolute w-12 h-12 text-zinc-400 -left-1"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                  xmlns="http://www.w3.org/2000/svg"
+                  ><path
+                    fill-rule="evenodd"
+                    d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
+                    clip-rule="evenodd"></path></svg
+                >
+              </div>
+
+              <span class="dark:text-foreground">{article.data.author}</span>
+              <span
+                class="pubDate md:-ml-2 text-zinc-500 dark:text-muted-foreground"
+                >Update {formatDate(article.data.pubDate)}</span
               >
             </div>
 
-            <span class="dark:text-foreground">{article.data.author}</span>
-            <span class="pubDate md:-ml-2 text-zinc-500 dark:text-muted-foreground"
-              >Update {formatDate(article.data.pubDate)}</span
-            >
+            <Tag tags={article.data.tags} />
           </div>
-
-          <Tag tags={article.data.tags} />          
-        </div>
-      </article>
+        </Prose>
+      </div>
 
       {
         relatedArticles.length > 0 && (
