Chang dark mode content color to foreground

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -29,17 +29,17 @@
         dark:prose-thead:text-foreground
         dark:prose-th:text-foreground
         dark:prose-em:text-foreground
-        dark:prose-p:text-zinc-300
-        dark:prose-blockquote:text-zinc-300
-        dark:prose-kbd:text-zinc-300
-        dark:prose-code:text-zinc-300
-        dark:prose-pre:text-zinc-300
-        dark:prose-ol:text-zinc-300
-        dark:prose-ul:text-zinc-300
-        dark:prose-li:text-zinc-300
-        dark:prose-table:text-zinc-300
-        dark:prose-tr:text-zinc-300
-        dark:prose-td:text-zinc-300"
+        dark:prose-p:text-foreground
+        dark:prose-blockquote:text-foreground
+        dark:prose-kbd:text-foreground
+        dark:prose-code:text-foreground
+        dark:prose-pre:text-foreground
+        dark:prose-ol:text-foreground
+        dark:prose-ul:text-foreground
+        dark:prose-li:text-foreground
+        dark:prose-table:text-foreground
+        dark:prose-tr:text-foreground
+        dark:prose-td:text-foreground"
 >
   <slot />
 </article>
